--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@
   --text-xs: 0.6875rem;
   --text-base: 0.8125rem;
   --text-base--line-height: 1.4375rem;
+
+  --text-md: 1.125rem;
+  --text-md--line-height: 1.625rem;
 }
 
 @layer base {
